[tool.poetry]
name = "cars"
version = "0.1.0"
description = "Webscraper to obtain car listings from AutoTrader"
authors = ["Yannis Katsaros <yanniskatsaros@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
pydantic = "^1.6"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
